--- a/app/src/main/res/layout/fragment_import.xml
+++ b/app/src/main/res/layout/fragment_import.xml
@@ -6,17 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".ui.importt.ImportFragment">
 
-    <TextView
-        android:id="@+id/text_import"
+    <EditText
+        android:id="@+id/edt_set_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:hint="Subject, chapter, unit"
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="5dp"
+        android:text="TITLE"
+        app:layout_constraintStart_toStartOf="@id/edt_set_name"
+        app:layout_constraintTop_toBottomOf="@id/edt_set_name" />
+
+    <Button
+        android:id="@+id/btn_scan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/ic_scan"
+        android:drawablePadding="5dp"
+        android:gravity="left|center"
+        android:padding="5dp"
+        android:text="Scan document"
+        app:layout_constraintStart_toStartOf="@id/edt_set_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    <Button
+        android:id="@+id/btn_import"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/ic_import"
+        android:drawablePadding="5dp"
+        android:gravity="left|center"
+        android:padding="5dp"
+        android:text="Import document"
+        app:layout_constraintEnd_toEndOf="@id/edt_set_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
