--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.co_well.quiz.ui.home.HomeFragment"
+        android:name="com.co_well.quiz.ui.navigation_fragment.home.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_search"
-        android:name="com.co_well.quiz.ui.search.SearchFragment"
+        android:name="com.co_well.quiz.ui.navigation_fragment.search.SearchFragment"
         android:label="Search"
         tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/navigation_import"
-        android:name="com.co_well.quiz.ui.importt.ImportFragment"
+        android:name="com.co_well.quiz.ui.navigation_fragment.importt.ImportFragment"
         android:label="Import"
         tools:layout="@layout/fragment_import" />
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.co_well.quiz.ui.profile.ProfileFragment"
+        android:name="com.co_well.quiz.ui.navigation_fragment.profile.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
