--- a/app/src/main/res/layout/activity_create_set.xml
+++ b/app/src/main/res/layout/activity_create_set.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.scan_import_activity.create_set.CreateSetActivity">
+    tools:context=".ui.activity.create_set.CreateSetActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_show"
@@ -45,11 +45,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_table"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tv1" />
+        app:layout_constraintTop_toBottomOf="@id/tv1"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/flab_add"
