--- a/app/src/main/res/layout/fragment_import.xml
+++ b/app/src/main/res/layout/fragment_import.xml
@@ -1,55 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.importt.ImportFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <EditText
-        android:id="@+id/edt_set_name"
+    <data class="ImportFragment">
+
+        <variable
+            name="viewModel"
+            type="com.co_well.quiz.ui.navigation_fragment.importt.ImportViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:hint="Subject, chapter, unit"
-        android:padding="10dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="match_parent">
+        <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--        xmlns:tools="http://schemas.android.com/tools"-->
+        <!--        tools:context=".ui.importt.ImportFragment">-->
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="5dp"
-        android:text="TITLE"
-        app:layout_constraintStart_toStartOf="@id/edt_set_name"
-        app:layout_constraintTop_toBottomOf="@id/edt_set_name" />
+        <EditText
+            android:id="@+id/edt_set_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:hint="Subject, chapter, unit"
+            android:padding="10dp"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_scan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:drawableLeft="@drawable/ic_scan"
-        android:drawablePadding="5dp"
-        android:gravity="left|center"
-        android:padding="5dp"
-        android:text="Scan document"
-        app:layout_constraintStart_toStartOf="@id/edt_set_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:text="TITLE"
+            app:layout_constraintStart_toStartOf="@id/edt_set_name"
+            app:layout_constraintTop_toBottomOf="@id/edt_set_name" />
 
-    <Button
-        android:id="@+id/btn_import"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:drawableLeft="@drawable/ic_import"
-        android:drawablePadding="5dp"
-        android:gravity="left|center"
-        android:padding="5dp"
-        android:text="Import document"
-        app:layout_constraintEnd_toEndOf="@id/edt_set_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        <Button
+            android:id="@+id/btn_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:drawableLeft="@drawable/ic_scan"
+            android:drawablePadding="5dp"
+            android:gravity="left|center"
+            android:padding="5dp"
+            android:text="Scan document"
+            android:onClick="@{viewModel.buttonScanClick}"
+            app:layout_constraintStart_toStartOf="@id/edt_set_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_import"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:drawableLeft="@drawable/ic_import"
+            android:drawablePadding="5dp"
+            android:gravity="left|center"
+            android:padding="5dp"
+            android:text="Import document"
+            app:layout_constraintEnd_toEndOf="@id/edt_set_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
