--- a/app/src/main/res/layout/activity_import_file.xml
+++ b/app/src/main/res/layout/activity_import_file.xml
@@ -16,12 +16,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Choose File"
-            app:layout_constraintEnd_toStartOf="@id/btn_camera"
+            app:layout_constraintEnd_toStartOf="@id/btn_write"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/btn_camera"
+            android:id="@+id/btn_write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/image_default"
+            android:background="@drawable/abc_vector_test"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_openfile" />
