--- a/app/src/main/res/menu/create_set_menu.xml
+++ b/app/src/main/res/menu/create_set_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:iconTint="@color/colorwhite"
-        android:id="@+id/action_save"
+
+    <item android:id="@+id/action_save"
+        android:title="save"
         android:icon="@drawable/ic_tick"
-        android:title="Save"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom">
+
+    </item>
 
 </menu>
