--- a/app/src/main/res/layout/layout_item_learn.xml
+++ b/app/src/main/res/layout/layout_item_learn.xml
@@ -13,54 +13,63 @@
         <TextView
             android:id="@+id/tv_learn"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_above="@id/ll1"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:gravity="center"
             android:text="hello"
             android:textSize="25sp" />
 
-        <LinearLayout
-            android:id="@+id/ll1"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/btn_fullScreen"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:weightSum="4">
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/ic_expand" />
 
-            <Button
-                android:id="@+id/btn_lv1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="-" />
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/ll1"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_alignParentBottom="true"-->
+        <!--            android:weightSum="4">-->
 
-            <Button
-                android:id="@+id/btn_lv2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="+" />
+        <!--            <Button-->
+        <!--                android:id="@+id/btn_lv1"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_margin="10dp"-->
+        <!--                android:layout_weight="1"-->
+        <!--                android:text="-" />-->
 
-            <Button
-                android:id="@+id/btn_lv3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="++" />
+        <!--            <Button-->
+        <!--                android:id="@+id/btn_lv2"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_margin="10dp"-->
+        <!--                android:layout_weight="1"-->
+        <!--                android:text="+" />-->
 
-            <Button
-                android:id="@+id/btn_lv4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="Done"
-                android:textAllCaps="false" />
+        <!--            <Button-->
+        <!--                android:id="@+id/btn_lv3"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_margin="10dp"-->
+        <!--                android:layout_weight="1"-->
+        <!--                android:text="++" />-->
 
-        </LinearLayout>
+        <!--            <Button-->
+        <!--                android:id="@+id/btn_lv4"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_margin="10dp"-->
+        <!--                android:layout_weight="1"-->
+        <!--                android:text="Done"-->
+        <!--                android:textAllCaps="false" />-->
+
+        <!--        </LinearLayout>-->
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
